# GLMap

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  PLAN.md  README.md  pyproject.toml
data/: panel_sources.yaml
data/audits/: benchmarks.json  benchmarks.md  context_overrides.yaml  models.json  models.md
data/benchmark_manifests/: README.md  downstream_tasks.json
docs/: METHODS.md  env_routing.md  model_catalog.md
models/: README.md  download_models_list.txt  fig4a-svm.csv  setup_external_models.sh
out_panel/: MLM_k1ablation_1000_main_panel.parquet  MLM_k1ablation_1000_manifest.json  control_manifest.json  control_panel.parquet  panel_manifest.json  panel_summary.md  panel_summary_per_dataset.tsv  panel_summary_table.tsv
out_phase1/: figS3_per_model_r.json
out_phase1/matrices/: D_AR.npy  D_MLM.npy  matrix_metadata.json  scored_models_actual.json
out_phase1/models/: AIRI-Institute__moderngena-base.json  (+122 more)
scripts/: build_control_panel.py  build_k-stride-PPL_ablation_subset.py  build_panel.py  build_panel_summary_table.py  run_classify_parallel.sh  run_downstream_classify.py  run_downstream_embed.py  run_kmer_ablation.sh  run_phase1_analysis.py  run_phase1_scoring.py  run_phase1_scoring_parallel.sh  run_rerun_stability.py  run_rerun_stability_parallel.sh  run_sweep.py
tables/: preview_table1.tex  preview_table2.tex  preview_table4b_phenotype_prediction_metrics.tex  preview_table_fig4a.tex  table1_panel_composition.tex  table2_downstream_tasks.tex  table4b_phenotype_prediction_V_family-groupkfold.tex  table4b_phenotype_prediction_V_kfold.tex  table4b_phenotype_prediction_Vd_family-groupkfold.tex  table4b_phenotype_prediction_Vd_kfold.tex  table_fig4a_evo_lineage_distances_cosine-Q.tex  table_fig4a_evo_lineage_distances_cosine-rawL.tex
tests/: conftest.py  test_analysis.py  test_ar_scoring.py  test_carbon_loader.py  test_composition.py  test_control_panel.py  test_embed_resume_and_aggregate.py  test_generator_loader.py  test_genslm_loader.py  test_huggingface_loader_auto_map.py  test_imports.py  test_main_panel.py  test_megadna_loader.py  test_mlm_pseudo_ll.py  test_ntv3_loader.py  test_panel_integration.py  test_plasmidgpt_loader.py  test_readers.py  test_rerun_stability.py  test_sweep_dispatch.py
(+1132 files in other folders)
